# rrbot_description

./: CMakeLists.txt  README.md  docker-compose.yml  package.xml  rrbot-ignition
config/: controller_configuration.yaml  pub_joints_trajectory.txt
launch/: 1_rviz_file.launch.py  2_set_world.launch.py  3_spawn_and_bridge.launch.py  4_spawn_bridge_control.launch.py  5_everything.launch.py  everything.launch.xml  z_laboratory.launch.py
rviz/: config.rviz
urdf/: rrbot.gazebo  rrbot.xacro  rrbot2_control.xacro.urdf  rrbot_and_control.xacro  test.xacro.urdf
worlds/: demo_actor.sdf  empty.sdf  maze.sdf
worlds/models/maze/: external_resources  maze.dae
